# career_assistant

./: .gitignore  config.yaml
.github/workflows/: ci.yml  frontend-ci.yml
backend/: .dockerignore  Dockerfile  README.md  config.yaml  docker-compose.yml  pyproject.toml
backend/migrations/models/: 1_20250701154233_None.py
backend/src/: main.py
backend/src/api/: dependencies.py  schemas.py
backend/src/api/v1/endpoints/: jobs.py
backend/src/config/: __init__.py  config.py
backend/src/core/: schemas.py  services.py  tasks.py
backend/src/core/parsers/: base.py  habr.py
backend/src/db/: __init__.py  config.py  db.py  repository.py
backend/src/db/models/: __init__.py  job.py
backend/src/scheduler/: __init__.py  scheduler.py
backend/src/utils/: __init__.py
backend/src/utils/notify_logger/: __init__.py  config.py  formatters.py  handlers.py  logger.py  tools.py  types.py  websocket_manager.py
backend/tests/: conftest.py  test_placeholder.py
backend/tests/api/: test_job_api.py
backend/tests/config/: test_config.py
backend/tests/core/: test_integration.py  test_job_service.py  test_parser.py  test_services.py
backend/tests/db/: test_db.py  test_repository.py
backend/tests/scheduler/: test_scheduler.py
backend/tests/test_data/: habr_vacancies.html
backend/tests/test_data/html/: habr_python_developer.html
backend/tests/utils/: test_logger.py
frontend/: env.d.ts  jest.config.ts  jest.setup.ts  package.json  tailwind.config.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/jobs/[jobId]/: page.tsx
frontend/src/components/: Header.tsx  JobCard.tsx
frontend/src/services/: jobService.ts  jobService.types.ts
frontend/tests/app/: page.test.tsx
frontend/tests/app/jobs/[jobId]/: page.test.tsx
frontend/tests/components/: Header.test.tsx  JobCard.test.tsx
frontend/tests/components/__snapshots__/: Header.test.tsx.snap  JobCard.test.tsx.snap
frontend/tests/services/: jobService.test.ts
