[project]
name = "career_assistant_backend"
version = "0.1.0"
description = "Backend for the Career Assistant project."
authors = [{ name = "Your Name", email = "your@email.com" }]
requires-python = ">=3.12"
readme = "README.md"
license = { text = "MIT" }
dependencies = [
    "aerich>=0.9.0",
    "aiosqlite>=0.21.0",
    "apscheduler>=3.11.0",
    "loguru>=0.7.3",
    "pydantic-settings-yaml>=0.2.0",
    "pydantic>=2.11.5",
    "pytelegrambotapi>=4.27.0",
    "tortoise-orm>=0.25.1",
]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`) rules by default.
# Built-in rules are available at https://docs.astral.sh/ruff/rules/
select = ["E4", "E7", "E9", "F", "I"]
ignore = []

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

# Same as Black.
line-length = 100

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.4.0",
    "pytest-asyncio>=1.0.0",
    "ruff>=0.11.13",
    "typer[all]>=0.16.0",
]
