[project]
name = "career_assistant_backend"
version = "0.1.0"
description = "Backend for the Career Assistant project."
authors = [{ name = "Anton Zh", email = "anton.zhorin@gmail.com" }]
requires-python = ">=3.12"
readme = "README.md"
license = { text = "MIT" }
dependencies = [
    "aerich>=0.9.0",
    "aiosqlite>=0.21.0",
    "apscheduler>=3.11.0",
    "beautifulsoup4>=4.12.3",
    "httpx>=0.27.0",
    "loguru>=0.7.3",
    "pydantic-settings-yaml>=0.2.0",
    "pydantic>=2.11.5",
    "pytelegrambotapi>=4.27.0",
    "tortoise-orm>=0.25.1",
    "lxml>=5.2.2",
]

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --cov=src --cov-report=html"
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "unittest: for unit tests",
]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
indent-width = 4

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501", # line too long, handled by ruff format
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.4.0",
    "pytest-asyncio>=1.0.0",
    "pytest-cov>=5.0.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.11.13",
    "typer[all]>=0.16.0",
]
