[project]
name = "career_assistant_backend"
version = "0.1.0"
description = "Backend for the Career Assistant project."
requires-python = ">=3.12"
dependencies = ["aerich>=0.9.0", "aiosqlite>=0.21.0", "apscheduler>=3.11.0", "beautifulsoup4>=4.12.3", "httpx>=0.27.0", "loguru>=0.7.3", "pydantic>=2.11.5", "pytelegrambotapi>=4.27.0", "tortoise-orm>=0.25.1", "lxml>=5.2.2", "fastapi>=0.111.0", "uvicorn[standard]>=0.30.1", "tomlkit>=0.13.0", "asyncpg>=0.29.0", "pyyaml>=6.0.1"]

[[project.authors]]
name = "Anton Zh"
email = "anton.zhorin@gmail.com"

[project.license]
text = "MIT"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q --cov=src --cov-report=html"
testpaths = ["tests"]
pythonpath = ["src"]
markers = ["unittest: for unit tests"]

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
indent-width = 4

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "UP"]
ignore = ["E501"]

[tool.uv]
dev-dependencies = ["pytest>=8.4.0", "pytest-asyncio>=1.0.0", "pytest-cov>=5.0.0", "pytest-mock>=3.14.0", "ruff>=0.11.13", "typer[all]>=0.16.0"]

[tool.aerich]
tortoise_orm = "src.main.TORTOISE_ORM_CONFIG"
location = "./migrations"
src_folder = "./."

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.poetry.group.dev.dependencies]
# ... existing code ...
